Finished header section

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <header>
   	<nav>
   	  <ul>
-  	    <li><a href="#about">ABOUT</a></li>
-  	    <li><a href="#portfolio">PORTFOLIO</a></li>
+  	    <li><a href="#about">ABOUT </a>|</li>
+  	    <li><a href="#portfolio">PORTFOLIO </a>|</li>
   	    <li><a href="#contact">CONTACT</a></li>
   	  </ul>
   	</nav>
   	<h1>FRANK SPANDLER</h1>
-  	<h2>FREELANCE DEVELOPER & DESIGNER</h2>
+  	<h2>FREELANCE WEB DEVELOPER & SEO ENTHUSIST</h2>
   </header>
   <main>
   	<section id="about">
