Added new classes to apply styling

--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
   <main>
   	<section id="about">
   		<h2>ABOUT ME</h2>
-  		<p id="me"><img src="images/me.jpg"></p>
-  		<p><strong>Hi my name is Frank Spandler and I am a freelance Web Developer currently living in San Luis Obispo county.</strong>  I really enjoy focusing on browser compatibility and responsive mobile design, so that your sites and apps look great on on older web browsers and look awesome on phones and tablets.  This means more clients having a positive experience on your site.  I have a Bachelors in Business Marketing and can help you with <strong>SEO</strong> (search engine optimization) and your online presence.</p><br/>
+  		<p class="cent"><img src="images/me.jpg"></p>
+  		<p class="bgwhite shrink">Hi my name is <strong>Frank Spandler</strong> and I am a freelance Web Developer currently living in San Luis Obispo county.  I really enjoy focusing on browser compatibility and responsive mobile design, so that your sites and apps look great on on older web browsers and look awesome on phones and tablets.  This means more clients having a positive experience on your site.  I have a Bachelors in Business Marketing and can help you with <strong>SEO</strong> (search engine optimization) and your online presence.</p><br/>
 
-   		<p>I am available to hire on a fulltime basis as well if you like my work.  Each image below in my portfolio is a link that leads to a sample I have created for potential clients to have a look at.  Please contact me at fspandler@gmail.com.</p>
+   		<p class="bgwhite shrink">I am available to hire on a fulltime basis as well if you like my work.  Each image below in my portfolio is a link that leads to a sample I have created for potential clients to have a look at.  Please contact me at fspandler@gmail.com.</p>
 
   	</section>
   	<section id="portfolio">
+  	<h2>PORTFOLIO</h2>
   		
   	</section>
   	<section id="contact">
+  	<h2>CONTACT</h2>
   		
   	</section>
   </main>
