--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <header>
   	<nav>
   	  <ul>
-  	    <li><a href="#about">ABOUT </a>|</li>
-  	    <li><a href="#portfolio">PORTFOLIO </a>|</li>
+  	    <li><a href="#about">ABOUT </a></li>
+  	    <li><a href="#portfolio">PORTFOLIO </a></li>
   	    <li><a href="#contact">CONTACT</a></li>
   	  </ul>
   	</nav>
