Basic contact section finished

--- a/index.html
+++ b/index.html
@@ -37,7 +37,15 @@
   	</section>
   	<section id="contact">
   	<h2>CONTACT</h2>
-  		
+  	<article>
+  		<address>
+  			Frank Spandler<br/>
+  			9528 Carmel Rd.<br/>
+  			Atascadero, CA 93422<br/>
+  			Phone:408-641-0458<br/>
+  			Email: fspandler@gmail.com
+  		</address>
+  	</article>
   	</section>
   </main>
 </body>
