--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <main>
   	<section id="about">
   		<h2>ABOUT ME</h2>
-  		<p class="cent"><img src="images/me.jpg"></p>
+  		<p class="cent"><img src="images/me.jpg" alt="A picture of Frank Spandler smiling"></p>
   		<p class="bgwhite pstyle">Hi I'm <strong>Frank Spandler</strong> and I am a freelance Web Developer living in San Luis Obispo county.  I enjoy focusing on browser compatibility and responsive mobile design, so that your sites and apps look great on on older web browsers and look awesome on phones and tablets.  More clients will have a positive experience on your site.  I have a Bachelors in Business Marketing and can help you with <strong>SEO</strong> (search engine optimization) and your online presence.<br/><br/>
 
    		I am available to hire on a fulltime basis as well if you like my work.  Each image below in my portfolio is a link that leads to a sample I have created for potential clients to have a look at.</p>
@@ -33,6 +33,7 @@
   	</section>
   	<section id="portfolio">
   	<h2>PORTFOLIO</h2>
+  	<img src="images/pot.png">
   		
   	</section>
   	<section id="contact">
