--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
   	</section>
   	<section id="portfolio">
   	<h2>PORTFOLIO</h2>
-  	<img src="images/pot.png">
+  	<img src="images/a.png" alt="Image of a sample page">
+    <img src="images/b.png" alt="Image of a sample page">
+    <img src="images/c.png" alt="Image of a sample page">
+    <img src="images/d.png" alt="Image of a sample page">
   		
   	</section>
   	<section id="contact">
