Added language alt to html tag moved h2 tag
moved h2 under article

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Frank Spandler Freelance Web Developer/Designer and aspiring Fullstack Developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,8 +40,8 @@
   		
   	</section>
   	<section id="contact">
-  	<h2>CONTACT</h2>
   	<article>
+  		<h2>CONTACT</h2>
   		<address>
   			Frank Spandler<br/>
   			9528 Carmel Rd.<br/>
