--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Frank Spandler Freelance Web Developer/Designer and aspiring Fullstack Developer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,15 +33,15 @@
   	</section>
   	<section id="portfolio">
   	<h2>PORTFOLIO</h2>
-  	<img src="images/a.png" alt="Image of a sample page">
-    <img src="images/b.png" alt="Image of a sample page">
-    <img src="images/c.png" alt="Image of a sample page">
-    <img src="images/d.png" alt="Image of a sample page">
+  	<img src="images/a.jpg" alt="Image of a sample page">
+    <img src="images/b.jpg" alt="Image of a sample page">
+    <img src="images/c.jpg" alt="Image of a sample page">
+    <img src="images/d.jpg" alt="Image of a sample page">
   		
   	</section>
   	<section id="contact">
-  	<h2>CONTACT</h2>
   	<article>
+  		<h2>CONTACT</h2>
   		<address>
   			Frank Spandler<br/>
   			9528 Carmel Rd.<br/>
